--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./main.js"></script>
+    <script src="./2dapreentrega/main.js"></script>
 </body>
 </html>
